# DANet

./: .gitignore  .travis.yml  LICENSE  LICENSE.md  Makefile  README.md  build.py  clean.sh  make.sh  osx_make.sh  requirements.txt  setup.py
danet/: option.py  test.py  train.py
docs/: Makefile  requirements.txt
encoding/: CMakeLists.txt  __init__.py  make.sh  parallel.py  syncbn.py  utils.py
encoding/_ext/encoding_lib/: __init__.py
encoding/cmake/: FindTorch.cmake
encoding/datasets/: __init__.py  ade20k.py  base.py  cityscapes.py  cityscapes_v0.py  cityscapescoarse.py  coco.py  download_datasets.sh  folder.py  hpw18.py  imagenet.py  minc.py  pascal_aug.py  pascal_voc.py  pcontext.py
encoding/dilated/: __init__.py  densenet.py  resnet.py
encoding/functions/: __init__.py  aggregate.py  basic.py  customize.py  dist_syncbn.py  encoding.py  rectify.py  syncbn.py
encoding/kernel/: common.h  thc_encoding.cu  thc_encoding.h
encoding/kernel/generic/: device_tensor.h  encoding_kernel.c  encoding_kernel.h  encoding_utils.c  pooling_kernel.c  pooling_kernel.h  syncbn_kernel.c  syncbn_kernel.h
encoding/kernel/include/: README.rst
encoding/lib/: __init__.py
encoding/lib/cpu/: .ninja_deps  .ninja_log  build.ninja  encoding_cpu.cpp  nms_cpu.cpp  operator.cpp  operator.h  rectify_cpu.cpp  roi_align.cpp  roi_align_cpu.cpp  setup.py  syncbn_cpu.cpp
encoding/lib/gpu/: .ninja_deps  .ninja_log  activation_kernel.cu  common.h  device_tensor.h  encoding_kernel.cu  encodingv2_kernel.cu  lib_ssd.cu  nms_kernel.cu  operator.cpp  operator.h  rectify_cuda.cu  roi_align_kernel.cu  setup.py  syncbn_kernel.cu
encoding/models/: __init__.py  base.py  cifarresnet.py  danet.py  deeplab.py  deepten.py  encnet.py  fcn.py  model_store.py  model_zoo.py  psp.py  resnet.py
encoding/models/backbone/: __init__.py  resnest.py  resnet.py  resnet_variants.py  resnext.py  wideresnet.py  xception.py
encoding/models/backbone/backup/: resnet.py
encoding/models/sseg/: __init__.py  atten.py  base.py  danet.py  deeplab.py  dran.py  encnet.py  fcfpn.py  fcn.py  psp.py  upernet.py
encoding/models/sseg/backup/: dran.py
encoding/modules/: __init__.py  encoding.py
encoding/nn/: __init__.py  attention.py  basic.py  customize.py  da_att.py  dran_att.py  dropblock.py  encoding.py  loss.py  rectify.py  splat.py  syncbn.py
encoding/nn/backup/: dran_att.py
encoding/src/: encoding_lib.cpp  encoding_lib.h
encoding/src/generic/: encoding_generic.c  encoding_generic.h  pooling_generic.c  pooling_generic.h  syncbn_generic.c  syncbn_generic.h
encoding/transforms/: __init__.py  autoaug.py  get_transform.py
encoding/utils/: __init__.py  dist_helper.py  files.py  log.py  lr_scheduler.py  metrics.py  misc.py  pallete.py  precise_bn.py  presets.py  train_helper.py
experiments/: main.py  option.py  utils.py
scripts/: prepare_ade20k.py  prepare_citys.py  prepare_cityscapes.py  (+5 more)
(+77 files in other folders)
